--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,21 @@
 click==7.1.2
 fasttext==0.9.2
 icu==0.0.1
+joblib==1.0.0
 langdetect==1.0.8
 langid==1.1.6
+nltk==3.5
 numpy==1.19.4
+pandas==1.1.5
 polyglot==16.7.4
 pybind11==2.6.1
 pycld2==0.41
 PyICU==2.6
+python-dateutil==2.8.1
+pytz==2020.5
+regex==2020.11.13
+scikit-learn==0.23.2
+scipy==1.5.4
 six==1.15.0
+threadpoolctl==2.1.0
+tqdm==4.54.1
